# GCode-Sentinel

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE-APACHE  LICENSE-MIT  NEXT_STEPS.md  OPTIMIZATION_ROADMAP.md  README.md
.github/workflows/: ci.yml  fuzz.yml
Orca GCODE/: arc_quarter_circles.gcode  arc_with_collinear_prefix.gcode  malm_slide.gcode
docs/superpowers/plans/: 2026-03-26-v2-0-foundations.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_detect_dialect.rs  fuzz_optimize.rs  fuzz_parse.rs  fuzz_round_trip.rs
src/: analyzer.rs  arc_fitter.rs  cli.rs  diagnostics.rs  dialect.rs  emitter.rs  geometry.rs  lib.rs  machine_profile.rs  main.rs  models.rs  optimizer.rs  parser.rs
tests/: integration.rs  property.rs
