[package]
name = "gcode-sentinel"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance CLI tool for 3D print G-Code validation and optimization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/twixinator/GCode-Sentinel"
keywords = ["gcode", "3dprinting", "cli", "validation", "optimization"]
categories = ["command-line-utilities", "parser-implementations"]

[[bin]]
name = "gcode-sentinel"
path = "src/main.rs"

[lib]
name = "gcode_sentinel"
path = "src/lib.rs"

[dependencies]
# CLI framework — MIT OR Apache-2.0
clap = { version = "4", features = ["derive"] }

# Library error types — MIT OR Apache-2.0
thiserror = "2"

# Binary / application error handling — MIT OR Apache-2.0
anyhow = "1"

# Memory-mapped I/O for large files — MIT OR Apache-2.0
memmap2 = "0.9"

# Structured logging — MIT
tracing = "0.1"

# Tracing subscriber (terminal output, env filter) — MIT
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# JSON serialization for --report-format json — MIT OR Apache-2.0
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# Temporary files in tests — MIT OR Apache-2.0
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
